# GGLasso

./: .gitignore  .gitmodules  .readthedocs.yaml  2Draft_benchmarks.ipynb  4TH_Draft_benchmarks.ipynb  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  LICENSE.txt  MIT.txt  README.md  basic_linalg.py  benchamrks.ipynb  data_generation.py  dual_newton.py  enviroment.yml  environment.yml  evaluation.py  example.py  exp_finance_fgl.py  exp_microbiome.py  exp_powerlaw_fgl.py  exp_powerlaw_ggl.py  exp_runtime_ggl.py  experiment_powerlaw.py  fgl_helper.py  ggl_helper.py  ggl_solver.py  microbiome_helper.py  old.py  pyproject.toml  readthedocs-requirements.txt  requirements.txt  setup.py  test_problem.py  testing.py  time_df_v1.csv
.github/workflows/: unit_test.yml
Lvsglasso/lvsglasso/: README.md  lvsglasso.py  proximal.py  util.py
benchmarks/: .gitignore  4TH_Draft_benchmarks.ipynb  SE_lowrank.rds  SVD_example.ipynb  benchamrks.ipynb  benchmarks.ipynb  benchmarks.py  bm_script.py  combined_benchmarks.py  draft_benchmarks.ipynb  draft_soil_example.ipynb  gglasso_benchmark.py  lambda_benchmarks.ipynb  ph.csv  ph_soil_example.ipynb  plots.py  prepare_soil_data.ipynb  regain_benchmark.py  setup_benchmark.py  sklearn_benchmark.py  soil_116.csv  soil_example.ipynb  time_benchmarks.py  utilita.py  utils.py  v7_benchmarks.ipynb  v8_benchmarks.ipynb
benchmarks/draft/: BM_draft.ipynb  SVD_example.ipynb  gglasso_lr.csv  o_benchmarks.ipynb  soil_example.ipynb
data/: dax_constituents.csv
data/microbiome/: OTU_data_1.csv  OTU_data_3.csv  OTU_data_4.csv  OTU_data_5.csv
data/slr_results/: AIC.csv  BIC.csv  BIC_0.csv  BIC_1.csv  BIC_2.csv  BIC_3.csv  L1.csv  L2.csv  SP.csv  assort.csv  info.csv  info2.csv  theta_1.csv  theta_10.csv  theta_11.csv  theta_12.csv  theta_13.csv  (+21 more)
examples/: README.txt  example_nonconforming_ggl.py  example_nonconforming_ggl.py.py  gallery_helper.py  plot_basic_example.py  plot_benchmarks.py  plot_fsgl_example.py  plot_joint_estimation.py  plot_nonconforming_ggl.py  plot_powerlaw_fgl.py  plot_powerlaw_ggl.py  plot_soil_example.py
experiments/: exp_finance_fgl.py  exp_microbiome.py  exp_powerlaw_ggl.py  exp_runtime_ggl.py
gglasso/: 4TH_Draft_benchmarks.ipynb  __init__.py  admm_solver.py  basic_linalg.py  benchmarks.ipynb  benchmarks.py  draft_benchmarks.ipynb  fgl_helper.py  generator.py  ggl_helper.py  ggl_solver.py  problem.py
paper/: paper.bib  paper.md  ref.bib
test/: test_block_sparse.py  test_model_select.py  test_singleGL.py  test_skleran.py
tests/: test_func_gl.py  test_problem.py
(+224 files in other folders)
